# ProjectMender

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
.github/workflows/: phase-one-platform.yml
docs/: phase-1-platform-acceptance.md  phase-1-security-boundary.md
docs/superpowers/specs/: 2026-07-16-projectmender-v1-design.md
openspec/changes/desktop-foundation-and-security-boundaries/: design.md  proposal.md  tasks.md
openspec/changes/desktop-foundation-and-security-boundaries/specs/desktop-application-shell/: spec.md
openspec/changes/desktop-foundation-and-security-boundaries/specs/local-credential-storage/: spec.md
openspec/changes/desktop-foundation-and-security-boundaries/specs/operation-authorization-state/: spec.md
openspec/changes/desktop-foundation-and-security-boundaries/specs/project-directory-access/: spec.md
openspec/changes/windows-11-x64-platform-validation/: design.md  proposal.md  tasks.md
openspec/changes/windows-11-x64-platform-validation/specs/desktop-application-shell/: spec.md
src/: App.test.tsx  App.tsx  AuthorizationPanel.test.tsx  AuthorizationPanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: authorization.rs  credentials.rs  foundation.rs  lib.rs  main.rs  private_data.rs  project_access.rs
src-tauri/tests/: authorization.rs  credentials.rs  foundation_runtime.rs  private_data_root.rs  project_access.rs  security_surface.rs
