[package]
name = "project-mender"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "project_mender_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "project-mender"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[dev-dependencies]
tempfile = "3"
